# cof

./: README.md  pyproject.toml
src/cof/: auth.py  main.py  models.py  network.py  remote.py  server.py  storage.py
tests/: README.md  __init__.py  test_network.py
