[project]
name = "cof"
version = "0.1.0"
description = "A version control system optimized for binary files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "blake3",
    "zstandard",
    "toml",
    "aiofiles",
    "asyncio-mqtt",
    "cryptography",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
cof = "cof.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
